Minor modifications, such as updating the list after a video is uploaded.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,6 @@
     android:padding="16dp"
     android:layout_marginTop="16dp">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/image" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -77,14 +73,16 @@
         android:text="Enter Title"
         android:layout_marginBottom="5dp"
         android:textSize="20sp"/>
+
     <EditText
         android:id="@+id/etCustomBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter text"
-        android:padding="12dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/edittext_box_border"
+        android:hint="Enter text"
+        android:minHeight="48dp"
+        android:padding="12dp"
         android:textColor="@android:color/black"
         android:textSize="16sp" />
     <TextView
